<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_background"
    tools:context=".view.AdminLoginFrag">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ImageView_LoginUserSelection_appTitle"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="80dp"
        android:scaleType="centerCrop"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_moods_title" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/button_AdminLoginFrag_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_white_back_button" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView_AdminLoginFrag_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/admin_login_page_admin_login"
        android:textColor="@color/mimi_pink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ImageView_LoginUserSelection_appTitle" />

    <!-- Input password-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField_adminLoginFrag_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_user_login"

        app:boxStrokeColor="@color/selector"
        app:hintTextColor="@color/selector"
        app:cursorColor="@color/selector"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textField_adminLoginFrag_username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_adminLoginFrag_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="#FFFFFF"
            android:textColorLink="@color/primary_dark_grape" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Input username -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField_adminLoginFrag_username"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/username_user_login"

        app:boxStrokeColor="@color/selector"
        app:hintTextColor="@color/selector"
        app:cursorColor="@color/selector"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_AdminLoginFrag_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_adminLoginFrag_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:inputType="text"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_adminLogin_SignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/primary_dark_grape"
        android:text="@string/sign_in_admin_login"
        android:textColor="@color/mimi_pink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textField_adminLoginFrag_password" />
</androidx.constraintlayout.widget.ConstraintLayout>