...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <Button
        android:id="@+id/button_LoginUserSelectionFragment_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin_user_select"
        android:textColor="@color/mimi_pink"
        android:backgroundTint="@color/primary_dark_grape"
        app:layout_constraintEnd_toEndOf="parent"
...
