<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="Home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_requests"
        android:title="Requests"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_map"
        android:icon="@drawable/ic_location"
        android:title="Map"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_community"
        android:icon="@drawable/ic_community"
        android:title="Community"
        app:showAsAction="ifRoom" />
</menu>
