...
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="59dp"
        android:text="@string/community_map_community_map"
        android:textSize="24sp"
        android:textColor="@color/mimi_pink"
        app:layout_constraintBottom_toTopOf="@+id/fragment_CommunityMapActivity_map"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageButton_CommunityMapActivity_back"
        app:layout_constraintTop_toTopOf="parent" />

    <fragment
...
